# ChangeLog for sys-kernel/git-sources
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.703 2010/01/01 14:05:47 mpagano Exp $

*git-sources-2.6.33_rc2-r4 (01 Jan 2010)
*git-sources-2.6.33_rc2-r3 (01 Jan 2010)

  01 Jan 2010; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.33_rc2-r3.ebuild, +git-sources-2.6.33_rc2-r4.ebuild:
  Version bump

*git-sources-2.6.33_rc2-r2 (31 Dec 2009)

  31 Dec 2009; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.33_rc2-r2.ebuild:
  Version bump

*git-sources-2.6.33_rc2-r1 (31 Dec 2009)

  31 Dec 2009; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.33_rc2-r1.ebuild:
  Version bump

*git-sources-2.6.33_rc2 (25 Dec 2009)

  25 Dec 2009; Michael Pagano <mpagano@gentoo.org>
  -git-sources-2.6.32-r10.ebuild, -git-sources-2.6.32-r11.ebuild,
  -git-sources-2.6.32-r12.ebuild, -git-sources-2.6.32-r13.ebuild,
  -git-sources-2.6.32-r14.ebuild, -git-sources-2.6.32-r15.ebuild,
  +git-sources-2.6.33_rc2.ebuild:
  Version bump and old version cleanup

*git-sources-2.6.33_rc1-r4 (24 Dec 2009)

  24 Dec 2009; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.33_rc1-r4.ebuild:
  Version bump

*git-sources-2.6.33_rc1-r3 (23 Dec 2009)

  23 Dec 2009; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.33_rc1-r3.ebuild:
  Version bump

*git-sources-2.6.33_rc1-r2 (22 Dec 2009)

  22 Dec 2009; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.33_rc1-r2.ebuild:
  Version bump

*git-sources-2.6.33_rc1-r1 (20 Dec 2009)

  20 Dec 2009; Michael Pagano <mpagano@gentoo.org>
  -git-sources-2.6.32-r1.ebuild, -git-sources-2.6.32-r2.ebuild,
  -git-sources-2.6.32-r3.ebuild, -git-sources-2.6.32-r4.ebuild,
  -git-sources-2.6.32-r5.ebuild, -git-sources-2.6.32-r6.ebuild,
  -git-sources-2.6.32-r7.ebuild, -git-sources-2.6.32-r8.ebuild,
  -git-sources-2.6.32-r9.ebuild, +git-sources-2.6.33_rc1-r1.ebuild:
  Version bump and old version cleanup
