@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/git-sources
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.703 2010/01/01 14:05:47 mpagano Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.704 2010/01/03 00:57:11 mpagano Exp $
+
+*git-sources-2.6.33_rc2-r5 (03 Jan 2010)
+
+  03 Jan 2010; Michael Pagano <mpagano@gentoo.org>
+  +git-sources-2.6.33_rc2-r5.ebuild:
+  Version bump
 
 *git-sources-2.6.33_rc2-r4 (01 Jan 2010)
 *git-sources-2.6.33_rc2-r3 (01 Jan 2010)
